syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

package votacao;

service VotacaoService {
  rpc StartElection (StartElectionRequest) returns (StartElectionReply);
  rpc CastVote (CastVoteRequest) returns (CastVoteReply);
  rpc GetResults (GetResultsRequest) returns (GetResultsReply);
}

message StartElectionRequest {
  string electionId = 1;
}

message StartElectionReply {
  bool started = 1;
  string message = 2;
}

message CastVoteRequest {
  string electionId = 1;
  string voterId = 2;
  string candidate = 3;
}

message CastVoteReply {
  bool accepted = 1;
  string message = 2;
}

message GetResultsRequest {
  string electionId = 1;
}

message ResultItem {
  string candidate = 1;
  int32 votes = 2;
}

message GetResultsReply {
  string electionId = 1;
  repeated ResultItem results = 2;
}
